<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bs_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="80dp"
        android:text="@string/l1"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/l2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/l2"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/l3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/l3"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/l4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/l4"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/l5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="35dp"
        android:text="@string/l5"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/web"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/l6"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/l7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="35dp"
        android:text="@string/l7"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/l8"
        android:textColor="@color/blue"
        android:textStyle="bold" />
    <!-- <TextView android:id="@+id/email" android:text="@string/l8" -->
    <!-- android:textColor="@color/blue" android:textStyle="bold" -->
    <!-- android:gravity="center_horizontal" android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" /> -->

</LinearLayout>